--- a/resume7-1.html
+++ b/resume7-1.html
@@ -95,11 +95,11 @@
              <label for="reason_for_contact"> Reason for Contact:</label>
              
               <div>
-             <input type="radio" id="reason_for_contact" name="reason_for_contact" required>
+             <input type="radio" id="reason_for_contact" name="reason_for_contact" value ="Interested to Interview" required>
             <label for="reason_for_contact">Interested to Interview</label>
              </div>
              <div>
-             <input type="radio" id="reason_for_contact" name="reason_for_contact" required>
+             <input type="radio" id="reason_for_contact" name="reason_for_contact" value ="To Give Job Information" required >
              <label for="reason_for_contact">To Give Job Information</label>
              </div>
              
